<resources>
    <string name="app_name">PracticalTest01Var05</string>
    <string name="action_settings">Settings</string>
    <string name="north">North</string>
    <string name="east">East</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="navigate">Navigate To secondary activity</string>
    <string name="title_activity_practical_test01_var05_secondary">
        PracticalTest01Var05SecondaryActivity
    </string>
</resources>
